# wg-helper-script

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
example/: config.yml
example/clients/: alice.conf  charlie.conf
example/server/: wg0.conf
tests/: conftest.py  test_client_commands.py  test_config.py  test_config_validation.py  test_emit_configs.py
wg_helper_script/: __init__.py  cli.py  common.py  config.py
wg_helper_script/commands/: client_add_cmd.py  client_disable_cmd.py  client_remove_cmd.py  emit_configs_cmd.py  init_cmd.py  validate_cfg_cmd.py
