[project]
name = "wg-helper-script"
version = "0.1.0"
description = "WireGuard helper CLI (configs, clients, QR)"
readme = "README.md"
license = "MIT"
authors = [{ name = "Contributors" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
  "pyyaml>=6",
  "cryptography>=41",
  "qrcode[pil]>=7",
]

[project.urls]
Homepage = "https://github.com/xobotyi/wg-helper-script"
Repository = "https://github.com/xobotyi/wg-helper-script"
Issues = "https://github.com/xobotyi/wg-helper-script/issues"

[project.scripts]
wg-helper-script = "wg_helper_script.cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true
pretty = true
ignore_missing_imports = true
